Fix social widget overlapping content (#21)
* Add missing scss components in app.scss

* Hide social widget on small screen

* Addsocials to offcanvas menu

* Show follow us menu if socials data exists

--- a/_sass/components/_navbar.scss
+++ b/_sass/components/_navbar.scss
@@ -66,6 +66,12 @@
   margin: 0;
 }
 
+#navbar-nav li a.socials {
+  align-items: center;
+  display: flex;
+  gap: 8px;
+}
+
 #navbar-nav li a {
   padding: 8px;
   color: var(--application-header-foreground-color);
